Added hover effect on buttons
On editor and tutorial. This has to be done via an external style sheet (elm can only do inline styling). In consequence, all styling when the button is active defers to the external css.

Altered transposition menu availability - it is only blanked out if the ABC doesn't parse.  If there's no explicit key, default to C Major.

--- a/abceditor.html
+++ b/abceditor.html
@@ -7,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Elm 0.17 ports sample</title>
 
-
+    <link rel="stylesheet" type="text/css" href="assets/css/abcplayer.css">
   </head>
   <body>
     <div id="elmAbcEditor"></div>
