--- a/abctutorial.html
+++ b/abctutorial.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Elm 0.17 ports sample</title>
-
+    <link rel="stylesheet" type="text/css" href="assets/css/abcplayer.css">
 
   </head>
   <body>
