Added File Load button to editor controller
This is done by means of a FileIO port.  This, in turn, requires the input widget to be given an id of 'fileinput' which is rather fragile.  Will extend FileIO later on to support file save.

--- a/abceditorcontroller.html
+++ b/abceditorcontroller.html
@@ -16,8 +16,10 @@
     <script>
     var node = document.getElementById('elmAbcEditorController');
     var myapp = Elm.AbcEditorController.embed(node);
-    <!-- the javascript below is written to accept an initial parameter named node-->
     </script>
+    <!-- the native soundfont javascript below is written to accept an initial parameter named node -->
     <script src="js/nativeSoundFont.js"></script>
+    <!-- the native  FileIO javascript below requites the input widget to have an id of fileinput -->
+    <script src="js/nativeFileIO.js"></script>
   </body>
 </html>
