Added score rendering to controller player
Not quite finished but the player now both displays the score as each note is added and exposes the MIDI player.  Neither of these are done if the score is in error.  Integrated the following modules:

* elm-abc-parser (latest version)
* elm-vextab
* elm-abc2vextab

--- a/abceditorcontroller.html
+++ b/abceditorcontroller.html
@@ -8,9 +8,11 @@
     <title>ABC Editor with MIDI audio controller</title>
 
     <link rel="stylesheet" type="text/css" href="assets/css/abcplayer.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/vextab.css">
   </head>
   <body>
     <div id="elmAbcEditorController"></div>
+    <script src="js/vextab-div.js"></script>
     <script src="js/soundfont-player.js"></script>
     <script src="distjs/elmAbcEditorController.js"></script>
     <script>
@@ -21,5 +23,6 @@
     <script src="js/nativeSoundFont.js"></script>
     <!-- the native  FileIO javascript below requites the input widget to have an id of fileinput -->
     <script src="js/nativeFileIO.js"></script>
+    <script src="js/nativeVexTab.js"></script>
   </body>
 </html>
